[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/diagbox-normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/gui/buttons/reset.png" type="Texture" id=3]
[ext_resource path="res://resources/ui/theme.tres" type="Theme" id=5]

[node name="Settings" type="Node"]
script = ExtResource( 1 )

[node name="Popup" type="WindowDialog" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 340.0
margin_bottom = 220.0
theme = ExtResource( 5 )
window_title = "menuSet"

[node name="ScrollContainer" type="ScrollContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 29.0
margin_top = 40.0
margin_right = -35.0
margin_bottom = -16.0

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/ScrollContainer"]
margin_right = 256.0
margin_bottom = 132.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/ScrollContainer/HBoxContainer"]
margin_right = 126.0
margin_bottom = 132.0
size_flags_horizontal = 3
alignment = 1

[node name="VoiceBloop" type="CheckBox" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 72.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "setVoice"
flat = true

[node name="Master" type="HSlider" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_right = 126.0
margin_bottom = 15.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Percentage" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer/Master"]
visible = false
margin_left = 20.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "75%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="HSlider" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 126.0
margin_bottom = 34.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Percentage" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer/Music"]
visible = false
margin_left = 20.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "75%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFX" type="HSlider" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 126.0
margin_bottom = 53.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Percentage" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer/SFX"]
visible = false
margin_left = 20.0
margin_right = 60.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "75%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextSpd" type="HSlider" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 126.0
margin_bottom = 72.0
max_value = 0.1
step = 0.001
value = 0.05

[node name="Percentage" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer/TextSpd"]
margin_left = 22.0
margin_top = -1.0
margin_right = 62.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Language" type="MenuButton" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 126.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "setLang"

[node name="Modman" type="MenuButton" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 58.0
margin_right = 57.0
margin_bottom = 74.0
text = "setMod"

[node name="Scale" type="MenuButton" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 126.0
margin_bottom = 112.0
focus_mode = 2
text = "setXscale"

[node name="Controls" type="Button" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 126.0
margin_bottom = 132.0
hint_tooltip = "setTooltipCntrls"
custom_fonts/font = ExtResource( 2 )
text = "setCntrl"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="Popup/ScrollContainer/HBoxContainer"]
margin_left = 191.0
margin_right = 256.0
margin_bottom = 132.0
size_flags_horizontal = 10

[node name="Label4" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_right = 65.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "setMASTER"
align = 2

[node name="Label" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_top = 20.0
margin_right = 65.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )
text = "setBGM"
align = 2

[node name="Label2" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_top = 40.0
margin_right = 65.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "setSFX"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Popup/ScrollContainer/HBoxContainer/VBoxContainer2"]
margin_top = 60.0
margin_right = 65.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
text = "setTxtSpd"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="TextureButton" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 266.0
margin_top = 2.0
margin_right = -32.0
margin_bottom = -176.0
texture_normal = ExtResource( 3 )

[connection signal="toggled" from="Popup/ScrollContainer/HBoxContainer/VBoxContainer/VoiceBloop" to="." method="_on_VoiceBloop_toggled"]
[connection signal="value_changed" from="Popup/ScrollContainer/HBoxContainer/VBoxContainer/Master" to="." method="_on_Master_value_changed"]
[connection signal="value_changed" from="Popup/ScrollContainer/HBoxContainer/VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="Popup/ScrollContainer/HBoxContainer/VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="pressed" from="Popup/ScrollContainer/HBoxContainer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
